--- a/libWiiSharp.csproj
+++ b/libWiiSharp.csproj
@@ -1,74 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!--Project was exported from assembly: C:\Users\theso\Downloads\NCPatcher\pack\libWiiSharp.dll-->
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DA1DDE59-7F59-4EBA-91E9-B06729E8E131}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>libWiiSharp</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
     <ApplicationVersion>0.4.0.0</ApplicationVersion>
-    <FileAlignment>512</FileAlignment>
-    <RootNamespace>libWiiSharp</RootNamespace>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <AssemblyTitle>libWiiSharp</AssemblyTitle>
+    <Description>A wii related .NET library modified to add features for other programs.</Description>
+    <Company>TheShadowEevee</Company>
+    <Product>libWiiSharp</Product>
+    <Copyright>Copyright © Leathl 2011, Copyright © Github Contributors 2020-2022</Copyright>
+    <FileVersion>0.6.0.0</FileVersion>
+    <NeutralLanguage>en</NeutralLanguage>
+    <AssemblyVersion>0.6.0.0</AssemblyVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <RegisterForComInterop>true</RegisterForComInterop>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <RegisterForComInterop>false</RegisterForComInterop>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BNS.cs" />
-    <Compile Include="Brlan.cs" />
-    <Compile Include="Brlyt.cs" />
-    <Compile Include="CertificateChain.cs" />
-    <Compile Include="CommonKey.cs" />
-    <Compile Include="ContentIndices.cs" />
-    <Compile Include="HbcTransmitter.cs" />
-    <Compile Include="Headers.cs" />
-    <Compile Include="IosPatcher.cs" />
-    <Compile Include="Lz77.cs" />
-    <Compile Include="MessageEventArgs.cs" />
-    <Compile Include="NusClient.cs" />
-    <Compile Include="Shared.cs" />
-    <Compile Include="Ticket.cs" />
-    <Compile Include="TMD.cs" />
-    <Compile Include="TPL.cs" />
-    <Compile Include="U8.cs" />
-    <Compile Include="WAD.cs" />
-    <Compile Include="Wave.cs" />
-    <Compile Include="AssemblyInfo.cs" />
-  </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
+  </ItemGroup>
 </Project>
